# yandmd

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
bot/: .gitignore  dockerfile  pyproject.toml
bot/src/: main.py
bot/src/db/: engine.py
bot/src/db/models/: Users.py
bot/src/handlers/: __init__.py
bot/src/handlers/commands/: auth.py  help.py  start.py  track.py
bot/src/handlers/inline/: __init__.py  audio.py
bot/src/handlers/keyboard/: aliases.py
bot/src/locales/: en.json  ru.json
bot/src/utils/: __init__.py  inline_answers.py  logging.py  messages.py  track.py  translate.py
goxray/: dockerfile  go.mod  go.sum  main.go
server/: dockerfile  go.mod  go.sum  main.go
